# kde-plasma-agentic-os-skill

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-scale-request.yml  02-idea.yml  03-package-expansion.yml  04-bug-report.yml  config.yml
.github/workflows/: ci.yml  community-digest.yml  community-intake.yml  publish-pypi.yml
community/: README.md
docs/: BEST_PRACTICES.md  PUBLISHING.md
src/kde_plasma_agentic_os_installer/: __init__.py  cli.py
src/kde_plasma_agentic_os_installer/skill_bundle/kde-plasma-agentic-os/: SKILL.md
src/kde_plasma_agentic_os_installer/skill_bundle/kde-plasma-agentic-os/agents/: openai.yaml
src/kde_plasma_agentic_os_installer/skill_bundle/kde-plasma-agentic-os/references/: endpoint-runbook.md  kwin-automation.md  official-docs.md  subsystems.md
src/kde_plasma_agentic_os_installer/skill_bundle/kde-plasma-agentic-os/scripts/: install_user_service.sh  kde_agent_endpoint.py  kde_agentctl.py  kde_probe.py  kwin_desktopctl.py  kwin_effectctl.py  kwin_probe.py  kwin_scriptctl.py  uninstall_user_service.sh
