[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kde-plasma-agentic-os-skill"
version = "0.1.0"
description = "Distributable Codex skill and local API stack for KDE Plasma automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "KDE Plasma Agentic OS Contributors" }
]
keywords = ["kde", "plasma", "kwin", "codex", "agent", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
  "Topic :: Software Development :: Build Tools"
]

[project.urls]
Homepage = "https://github.com/1tsJeremiah/kde-plasma-agentic-os-skill"
Repository = "https://github.com/1tsJeremiah/kde-plasma-agentic-os-skill"
Issues = "https://github.com/1tsJeremiah/kde-plasma-agentic-os-skill/issues"

[project.scripts]
kde-plasma-skill = "kde_plasma_agentic_os_installer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kde_plasma_agentic_os_installer" = ["skill_bundle/kde-plasma-agentic-os/**"]
